# csv-nose

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PERFORMANCE.md  README.md
.claude/: settings.json
.claude/agents/: api-compat-checker.md  benchmark-checker.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/cargo-audit/: SKILL.md
.claude/skills/release-prep/: SKILL.md
.github/workflows/: rust.yml
docs/: ACCURACY.md  BENCHMARK_DATASETS_INFO.md  IMPLEMENTATION.md  PERFORMANCE.md
docs/audits/: AUDIT_REPORT_2026-02-21.md
src/: benchmark.rs  encoding.rs  error.rs  field_type.rs  http.rs  lib.rs  main.rs  metadata.rs  sample.rs  sniffer.rs
src/tum/: mod.rs  potential_dialects.rs  regexes.rs  score.rs  table.rs  type_detection.rs  uniformity.rs
tests/: benchmark_accuracy.rs  integration_tests.rs
tests/data/annotations/: csv-wrangling-codec.txt  csv-wrangling-messy.txt  csv-wrangling.txt
tests/data/fixtures/: nyc_311_sample_200.csv
