[package]
name = "csv-nose"
version = "0.3.1"
edition = "2024"
authors = ["Joel Natividad <joel@datHere.com>"]
description = "CSV dialect sniffer using the Table Uniformity Method - a drop-in replacement for qsv-sniffer"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jqnatividad/csv-nose"
keywords = ["csv", "sniffer", "dialect", "detection"]
categories = ["command-line-utilities", "parsing", "text-processing"]
exclude = ["tests/data/*"]

[lib]
name = "csv_nose"
path = "src/lib.rs"

[[bin]]
name = "csv-nose"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]

[dependencies]
csv = "1"
clap = { version = "4.4", features = ["derive"], optional = true }
regex = "1"
simdutf8 = "0.1"
thiserror = "2.0"
bytecount = "0.6.9"
chardetng = "0.1"
encoding_rs = "0.8"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
