[package]
name = "csv-nose"
version = "0.6.0"
edition = "2024"
authors = ["Joel Natividad <joel@datHere.com>"]
description = "CSV dialect sniffer using Garcia's Table Uniformity Method"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jqnatividad/csv-nose"
keywords = ["csv", "sniffer", "dialect", "detection"]
categories = ["command-line-utilities", "parsing", "text-processing"]
exclude = ["tests/data/*"]

[lib]
name = "csv_nose"
path = "src/lib.rs"

[[bin]]
name = "csv-nose"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]
http = ["ureq"]
runtime-dispatch-simd = ["bytecount/runtime-dispatch-simd"]
generic-simd = ["bytecount/generic-simd"]

[dependencies]
csv = "1"
clap = { version = "4.5", features = ["derive"], optional = true }
regex = "1"
simdutf8 = "0.1"
thiserror = "2.0"
bytecount = "0.6"
chardetng = "0.1"
encoding_rs = "0.8"
ureq = { version = "3", optional = true }
foldhash = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
